add SBT_OPTS config to prevent an OutOfMemoryError in the last test