@@ -1,14 +1,14 @@
 #Chess Challenge
 
 # Problem
-The problem is to find all unique configurations of a set of normal chess pieces on a chess board with dimensions MÃ—N where none of the pieces is in a position to take any of the others. Assume the colour of the piece does not matter, and that there are no pawns among the pieces.
+The problem is to find all unique configurations of a set of normal chess pieces on a chess board with dimensions M×N where none of the pieces is in a position to take any of the others. Assume the colour of the piece does not matter, and that there are no pawns among the pieces.
 Write a program which takes as input:
 The dimensions of the board: M, N
 The number of pieces of each type (King, Queen, Bishop, Rook and Knight) to try and place on the board.
 
 As output, the program should list all the unique configurations to the console for which all of the pieces can be placed on the board without threatening each other.
 
-When returning your solution, please provide with your answer the total number of unique configurations for a 7Ã—7 board with 2 Kings, 2 Queens, 2 Bishops and 1 Knight. Also provide the time it took to get the final score. Needless to say, the lower the time, the better.
+When returning your solution, please provide with your answer the total number of unique configurations for a 7×7 board with 2 Kings, 2 Queens, 2 Bishops and 1 Knight. Also provide the time it took to get the final score. Needless to say, the lower the time, the better.
 
 # The Solution
 
@@ -29,5 +29,6 @@ Based on experience with previous problems, I reduced the current problem to an 
 
 * git clone https://ignaciomosca@bitbucket.org/ignaciomosca/chesschallengescala.git
 * cd chesschallengescala
+* export SBT_OPTS="-XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled -Xmx4g" (try this if you get an OutOfMemoryError)
 * sbt compile
 * sbt test
